objects/Challenge_Category__c.object
<CustomObject>
    <description>Categories (salesforce.com, google, javascript, etc.) that are each challenge &quot;belongs&quot; to. This is a junction object.</description>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Challenges</relationshipLabel>
        <relationshipName>Challenge_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Challenge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge</label>
        <referenceTo>Challenge__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Challenge_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SQL_Id__c</fullName>
        <externalId>true</externalId>
        <label>SQL Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Challenge Category</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>